# h264-parser

./: .gitignore  Cargo.toml  README.md  flake.nix  test_eg.rs
.direnv/: flake-profile-2-link
examples/: basic_parsing.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
src/: au.rs  bitreader.rs  bytescan.rs  eg.rs  lib.rs  nal.rs  parser.rs  pps.rs  sei.rs  slice.rs  sps.rs
tests/: integration_test.rs  proptests.proptest-regressions  proptests.rs
